# bonita

./: .gitignore  Dockerfile  README.md  nginx.conf  start.sh
backend/: README.md  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py  worker.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 202408312222_bf7080c679d7_initial.py  202409022232_440552a7d45d_task_config.py  (+3 more)
backend/app/api/: deps.py  main.py
backend/app/celery_tasks/: fileinfo.py  tasks.py  transfer.py
backend/app/core/: config.py  db.py  security.py  task.py
backend/app/db/: __init__.py
backend/app/schemas/: __init__.py  record.py  response.py  setting.py  task.py  token.py  user.py
backend/app/tasks/: tasks.py
backend/app/utils/: filehelper.py
backend/app/watcher/: handler.py  manager.py
backend/bonita/: main.py  worker.py
backend/bonita/alembic/: env.py
backend/bonita/api/: deps.py  main.py
backend/bonita/celery_tasks/: decorators.py  tasks.py
backend/bonita/core/: config.py  db.py  enums.py  security.py  service.py  task.py
backend/bonita/db/: __init__.py
backend/bonita/schemas/: __init__.py  extrainfo.py  file_browser.py  media_item.py  mediaitem.py  metadata.py  record.py  response.py  scraping.py  system.py  task.py  token.py  watch_history.py
backend/bonita/services/: celery_service.py  downloader_service.py  record_service.py  setting_service.py  tool_service.py
backend/bonita/utils/: downloader.py  filehelper.py  fileinfo.py  http.py  logger.py  regex.py  singleton.py
backend/bonita/watcher/: handler.py  manager.py
(+195 files in other folders)
