[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.13.2",
    "bcrypt==4.2.0",
    "celery==5.4.0",
    "fastapi==0.112.2",
    "pillow>=12.1.1",
    "pydantic-settings==2.4.0",
    "pydantic[email]==2.8.2",
    "python-jose==3.4.0",
    "python-multipart==0.0.22",
    "redis==5.0.8",
    "scrapinglib>=0.12.2",
    "sqlalchemy==2.0.32",
    "transmission-rpc==7.0.11",
    "uvicorn[standard]==0.30.6",
    "watchdog==6.0.0",
]
